# tsp-approximation

./: .gitignore  CMakeLists.txt  README.md  TODOlist  \  compile_commands.json  out  random995710.100.dot  solvers.c  tags  tsp.h
cmake/: CMakeLists.txt  FindCPLEX.cmake_
data/: att48plot.dot
data/att48/: att48.dot  att48.model.lp
data_tsplib/: .benders.lp
gr24/: gr24.dot  gr24log.txt
include/: adjlist.h  animation.h  approximations.h  constructives.h  fortune.h  globals.h  halfedge.h  metaheuristics.h  model_builder.h  parser_utils.h  parsers.h  point.h  pqueue.h  refinements.h  solvers.h  tracker.h  tsp.h  union_find.h  utils.h
magu-tsp-approximation/: TODOlist
pandora_box/: main.c
results/: random1012484.100.dot  results.csv  results0.csv  results1.csv  results_generated.csv  results_heur.csv  track_generated5.csv  track_generated50.csv  track_heur10.csv  track_heur3.csv  track_heur50.csv  utils.py
src/: Makefile  \  adjlist.c  approximations.c  compile_commands.json  constructives.c  emergency_res.csv  event.c  event.h  globals.c  hard_fixing  inputs.c  inputs.h  main.c  metaheuristics.c  model_builder.c  myprob.mps  out  parser_utils.c  parsers.c  point.c  pqueue.c  rbtree.c  rbtree.h  refinements.c  soft  solution.xml  solvers.c  solvrer2.c  table.csv  tracker.c  tsp.c  tsp_approx  union_find.c  utils.c  valout  wow
thesis/: lincolncsthesis.cls  main..blg  main.aux  main.bbl  main.bcf  main.blg  main.dvi  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.run.xml  main.tex  main.toc
tsp-approximation/: compile_commands.json
(+596 files in other folders)
